@@ -180,4 +180,14 @@
         profile="opengever.meeting:default"
         />
 
+    <!-- 4302 -> 4302 -->
+    <genericsetup:upgradeStep
+        title="Add membership_id column."
+        description=""
+        source="4301"
+        destination="4302"
+        handler="opengever.meeting.upgrades.to4302.AddMembershipIdColumn"
+        profile="opengever.meeting:default"
+        />
+
 </configure>
